box visibility fixed

--- a/styles.css
+++ b/styles.css
@@ -195,6 +195,7 @@ hr {
     margin:0 auto;
     width:100%;
     z-index:0;
+    opacity: 0%;
     
     
   }
